<resources>

    <string name="app_name">Tx12</string>
    <string name="app_name_html"><font face="Garamond" size="14" color="yellow">Tx<sup>12</sup></font></string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Dispatch X12</string>
    <string name="messages">Messages</string>
    <string name="intervals">Stop No: </string>
    <string name="carrierName">Gulf Central Transportation, Inc</string>
    <string name="shipper">Shipper</string>
    <string name="billTo">Bill To</string>
    <string name="specialInstructions">Special Instructions</string>
    <string name="contacts">Contacts</string>
    <string name="drivers">Drivers</string>
    <string name="status">Status: </string>
    <string name="chat">Chat</string>
    <string name="angle">Angle</string>
    <string name="fonts">Fonts</string>
    <string name="friendstext">Friends</string>
    <string name="setuptext">Settings</string>
    <string name="abouttext">About</string>
    <string name="send_to">Send To</string>
    <string name="information">Information</string>
    <string name="textentryhint">Enter Text and click on Drawing</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Closed</string>
    <string name="loads">Loads</string>
    <string name="exitapp">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="working">Please wait &#8230;Working!</string>
    <string name="add">Add</string>
    <string name="member_hint">Enter Member Name</string>
    <string name="group_maintenance">Group Maintenance&#8230;</string>
    <string name="info">Waiting for Friends&#8230;</string>
    <string name="nofriends">No Friends</string>
    <string name="info_blank"></string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="emailaddress">Email</string>
    <string name="password">Password</string>
    <string name="newusertitle">New Member Registration</string>
    <string name="newusersummary">Click here to Register for Network Access. After Registration exit setup and reenter and you should be able to set your Network Settings.</string>
    <string name="changepasswordtitle">Change Password</string>
    <string name="changepasswordsummary">Check box to change password at Start of application.  You will not be able to view the web application unless you know this password.</string>
    <string name="changepasswordmessage">You will not be able to view your information at <a>http://artytheartist.com</a> unless you know this password.</string>
    <string name="waitforconfirmation">Wait for Confirmation before moving from here</string>
    <string name="memberidretrieved">Your Member ID was successfully Retrieved</string>
    <string name="memberidnotretrieved">There was an error. Your Member ID was not successfully Retrieved</string>
    <string name="invalidemail">Invalid Email Address</string>
    <string name="invalidpassword">Invalid Password</string>
    <string name="passwordsdontmatch">Passwords do not match</string>
    <string name="invalidfname">Invalid First Name</string>
    <string name="invalidlname">Invalid Last Name</string>
    <string name="invalidnewuser">Invalid New User.  Make sure all fields are correct and try again</string>
    <string name="newuser">New User</string>
    <string name="fullname">Name</string>
    <string name="durationis">Duration</string>
    <string name="accountcategorytitle">Account Settings</string>
    <string name="loginsettingstitle">Account Login</string>
    <string name="loginsettingsummary">Enter your email address.  You must have a valid email address to use the network option.</string>
    <string name="loginsettingdialogtitle">Account Settings</string>
    <string name="loginsettingdialogmessage">Enter email address</string>
    <string name="loginsettingshint">artytheartist@mapmymotion.com</string>
    <string name="loginmemberidtitle">Member ID</string>
    <string name="loginmemberidsummary">Enter your Member ID.  This is your assigned member id and should not be manually changed. </string>
    <string name="loginmemberiddialogtitle">Account Settings</string>
    <string name="loginmemberiddialogmessage">Enter Member ID</string>
    <string name="companytitle">Company ID</string>
    <string name="companyidsummary">Enter your Company ID.  This is your assigned company id and should not be manually changed. </string>
    <string name="companyiddialogtitle">Company Settings</string>
    <string name="companyiddialogmessage">Enter Company ID</string>
    <string name="companynametitle">Company Name</string>
    <string name="companynamesummary">Enter your Company Name.  This is your assigned company Name and should not be manually changed. </string>
    <string name="companynamedialogtitle">Company Name</string>
    <string name="companynamedialogmessage">Enter Company Name</string>
    <string name="companynamehint">Your Company Name</string>
    <string name="connectedtoserver">Connected to server </string>
    <string name="noconnectiontoserver">Cannot establish connection to </string>
    <string name="pacetext">Pace</string>
    <string name="networkingonoff_summary">Networking can create massive data usage charges based on your cell phone user plan.  After turning networking on or off, restart the application.</string>
    <string name="networkingonoff_title">Networking</string>
    <string name="networkingcategory_title">Network</string>
    <string name="networkiddefault">96.31.86.129</string>
    <string name="networkiddalogmessage">Set Network ID.</string>
    <string name="networkiddialogtitle">Set Network ID.</string>
    <string name="networkidsummary">Set Network ID.   Network traffic through the default server can be restricted.  We recommend purchasing your own server at sales@mapmymotion.com</string>
    <string name="networkidtitle">Network ID</string>
    <string name="networknotavailable">Network Not Available.  Go to Menu->Settings and turn on Network Feature and restart Application.</string>
    <string name="messagenotavailable">Network must be on to message between users.  Go to Menu->Settings and turn on Network Feature and restart Application.</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="newusermessage">If your email is already entered in our system then press Cancel and go to Menu->Preference->Email address and enter your email address.  Your Member Id will be automatically entered for you.</string>
    <string name="companycategory">Company Information</string>
    <string name="rates">Rates</string>
    <string name="equipment">Equipment</string>
    <string name="tradingpartners">Trading Partners</string>
    <string name="employees">Employees</string>
    <string name="maintenance">Maintenance</string>
    <string name="settings">Settings</string>
    <string name="transactions">Transactions</string>
    <string name="menu">Menu</string>
    <string name="my_position">My Position</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="viapoint">Via-Point</string>
    <string name="map_options_title">Map Options</string>
    <string name="mapprovidertypesummary">Select the Map Provider</string>
    <string name="mapprovidertypetitle">Map Type</string>
    <string name="routeprovidersummary">Select the Route Provider for routing Stops </string>
    <string name="routeprovidertitle">Route Provider</string>
    <string name="zoomlevelsummary">The zoom level when the map is initially displayed</string>
    <string name="zoomleveltitle">Zoom Level</string>
    <string name="uomtitle">Measurement Units</string>
    <string name="uomsummary">Enter Default Measurement Units</string>
    <string name="quit">Quit</string>
    <string name="signreceiver">Sign</string>
    <string name="save">Save</string>
    <string name="loading">Loading&#8230;</string>
    <string name="addStop">Add Stop</string>
    
</resources>