<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/group_default" >
         <item
            android:id="@+id/addStop"
            android:showAsAction="always"
            android:title="@string/addStop"
            android:titleCondensed="@string/addStop"
            android:visible="false">
        </item> 
        
        <item
            android:id="@+id/save"
            android:showAsAction="always"
            android:title="@string/save"
            android:titleCondensed="@string/save"
            android:visible="false">
        </item> 
        
        <item
            android:id="@+id/chat"
            android:icon="@android:drawable/sym_action_chat"
            android:showAsAction="always"
            android:title="@string/chat"
            android:titleCondensed="@string/chat">
        </item> 
        <item
            android:id="@+id/loads"
            android:icon="@drawable/transactionstransparent"
            android:showAsAction="always"
            android:title="@string/loads"
            android:titleCondensed="@string/loads">
        </item> 
        <item
            android:id="@+id/setup"
            android:icon="@drawable/transactionstransparent"
            android:showAsAction="never"
            android:title="@string/settings"
            android:titleCondensed="@string/settings">
        </item> 
        <item
            android:id="@+id/information"
            android:icon="@drawable/transactionstransparent"
            android:showAsAction="never"
            android:title="@string/information"
            android:titleCondensed="@string/information">
        </item> 
        
        <item
            android:id="@+id/quit"
            android:icon="@drawable/transactionstransparent"
            android:showAsAction="never"
            android:title="@string/quit"
            android:titleCondensed="@string/quit">
        </item> 
        
    </group>

</menu>